fix: overlapping issues; change: make banner smaller

--- a/app/globals.css
+++ b/app/globals.css
@@ -34,7 +34,7 @@ body {
   position: absolute;
   top: 0;
   left: 1rem;
-  width: 295px;
+  width: 280px;
   height: 158px;
   z-index: 60;              
   filter: drop-shadow(0 4px 10px rgba(0, 0, 0, 0.25));
@@ -42,8 +42,8 @@ body {
 }
 
 .logo-container {
-  width: 100%;
-  height: 100%;
+  width: 95%;
+  height: 97%;
   padding-right: 40px;
   margin-left: -20px;
   background: #F1F1F3;
@@ -54,38 +54,15 @@ body {
 }
 
 .namfrel-logo {
-  width: 85%;
-  max-height: 140px;
+  width: 70%;
+  height: 70%;
   object-fit: contain;
 }
 
 .apc-logo {
   width: 70%;
-  max-height: 120px;
+  height: 70%;
   object-fit: contain;
-}
-
-@media (max-width: 768px) {
-  .logo-container-wrapper {
-    width: 220px;
-    height: 120px;
-    z-index: 60;
-    left: 1rem;
-  }
-
-  .logo-container {
-    padding-right: 20px;
-  }
-
-  .namfrel-logo {
-    width: 80%;
-    max-height: 90px;
-  }
-
-  .apc-logo {
-    width: 65%;
-    max-height: 80px;
-  }
 }
 
 /* Header/Subheader Styling */
@@ -94,8 +71,7 @@ body {
   background-color: #1e0775;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 1rem;
+  justify-content: flex-end;
   position: relative;
   z-index: 30;
   min-height: 5rem;
@@ -112,6 +88,38 @@ body {
   z-index: 23;
 }
 
+
+@media (max-width: 1490px) {
+  .main-header {
+    padding-left: 320px;
+  }
+
+  .sub-header {
+    display: none;
+  }
+}
+
+@media (max-width: 1280px) {
+  .main-header {
+    padding-left: 320px;
+  }
+
+  .sub-header {
+    display: none;
+  }
+}
+
+@media (max-width: 1024px) {
+  .main-header {
+    padding-left: 1rem;
+    justify-content: flex-end;
+  }
+  
+  .sub-header {
+    display: none;
+  }
+}
+
 @media (max-width: 768px) {
   .main-header {
     justify-content: flex-end;
@@ -121,9 +129,5 @@ body {
     margin-left: -7px;
     z-index: 60;
     left: 1rem;
-  }
-
-  .sub-header {
-    display: none;
-  }
+  }  
 }
